# sjjs

anchor-function-tutorial/: Anchor.toml
anchor-function-tutorial/programs/anchor-function-tutorial/: Cargo.toml
anchor-function-tutorial/programs/anchor-function-tutorial/src/: lib.rs
anchor-function-tutorial/tests/: anchor-function-tutorial.ts
day1/: Anchor.toml
day1/programs/day1/: Cargo.toml
day1/programs/day1/src/: lib.rs
day1/tests/: day1.ts
day2/: Anchor.toml
day2/programs/day2/: Cargo.toml
day2/programs/day2/src/: lib.rs
day2/tests/: day2.ts
day4/: Anchor.toml
day4/programs/day4/: Cargo.toml
day4/programs/day4/src/: lib.rs
day4/tests/: day4.ts
day5/: Anchor.toml
day5/programs/day5/: Cargo.toml
day5/programs/day5/src/: lib.rs
day5/tests/: day5.ts
